--- a/AngularBasic/BasicApp/projects/pricing-page/src/app/app.component.html
+++ b/AngularBasic/BasicApp/projects/pricing-page/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-pricing-nav></app-pricing-nav>
 <app-pricing-info></app-pricing-info>
-<div class="container">
+<div class="container text-center">
   <div class="card-deck mb-3 text-center">
+    <!-- <div class="text-center"></div> -->
     <app-pricing-card></app-pricing-card>
     <app-pricing-card></app-pricing-card>
     <app-pricing-card></app-pricing-card>
+   
   </div>
+  <app-pricing-footer></app-pricing-footer>
 </div>
